add collector service

--- a/labshock/docker-compose.yml
+++ b/labshock/docker-compose.yml
@@ -46,8 +46,6 @@ services:
         ipv4_address: 192.168.2.10
     ports:
       - "8080:8080"
-    volumes:
-      - plc-data:/workdir/webserver
 
   ews:
     build: ./ews/
@@ -80,7 +78,16 @@ services:
     network_mode: host
     restart: unless-stopped
 
+  collector:
+    build: ./collector/
+    networks:
+      l3_network:
+        ipv4_address: 192.168.3.40
+    restart: unless-stopped
+    ports:
+      - "2443:2443"
+      - "8766:8766"
+
 volumes:
   scada-data:
-  plc-data:
   ews-data:
