--- a/labshock/docker-compose.yml
+++ b/labshock/docker-compose.yml
@@ -54,7 +54,8 @@ services:
 
   router:
     build: ./router/
-    privileged: true
+    cap_add:
+      - NET_ADMIN
     networks:
       l2_network:
         ipv4_address: 192.168.2.254
@@ -104,7 +105,6 @@ services:
     cap_add:
       - NET_ADMIN
       - NET_RAW
-    privileged: true
     networks:
       l3_network:
         ipv4_address: 192.168.3.30
@@ -113,8 +113,6 @@ services:
       - "3443:3443"
     depends_on:
       - portal
-    dns:
-     - 127.0.0.11
     volumes:
       - portal-data:/app/portal/
 
