--- a/labshock/docker-compose.yml
+++ b/labshock/docker-compose.yml
@@ -16,6 +16,11 @@ networks:
     ipam:
       config:
         - subnet: 172.16.0.0/16
+  it_network:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 10.110.0.0/16
 
 services:
   portal:
@@ -24,7 +29,6 @@ services:
       - portal-data:/app/config/
     ports:
       - "443:443"
-
 
   dmz-firewall:
     build: ./dmz-firewall/
@@ -35,10 +39,28 @@ services:
         ipv4_address: 192.168.3.253
       dmz_network:
         ipv4_address: 172.16.0.253
+      it_network:
+        ipv4_address: 10.110.0.253
     ports:
       - "5443:5443"
     volumes:
       - portal-data:/app/portal/
+      - dmz-firewall-data:/app/config/
+
+  dmz-collector:
+    build: ./dmz-collector/
+    cap_add:
+      - NET_ADMIN
+    networks:
+      dmz_network:
+        ipv4_address: 172.16.0.40
+    ports:
+      - "6443:2443"
+    depends_on:
+      - portal
+    volumes:
+      - portal-data:/app/portal/
+      - dmz-collector-data:/app/config/
 
   dmz-transfer:
     build: ./dmz-transfer/
@@ -49,6 +71,22 @@ services:
         ipv4_address: 172.16.0.21
     ports:
       - "4443:80"
+    volumes:
+      - portal-data:/app/portal/
+
+  dmz-pentest:
+    build: ./pentest/
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
+    networks:
+      dmz_network:
+        ipv4_address: 172.16.0.30
+    ports:
+      - "3222:22"
+      - "7443:3443"
+    depends_on:
+      - portal
     volumes:
       - portal-data:/app/portal/
 
@@ -133,14 +171,18 @@ services:
         ipv4_address: 192.168.3.40
     ports:
       - "2443:2443"
-      - "8766:8766"
     depends_on:
       - portal
     volumes:
       - portal-data:/app/portal/
+      - ot-collector-data:/app/config/
 
 volumes:
   scada-data:
   plc-data:    
   ews-data:
   portal-data:
+  collector-data:
+  ot-collector-data:
+  dmz-collector-data:
+  dmz-firewall-data:
