--- a/labshock/docker-compose.yml
+++ b/labshock/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     ports:
       - "443:443"   
     environment:
-      - LABSHOCK_VERSION=1.8.0
+      - LABSHOCK_VERSION=1.8.1
 
   dmz-firewall:
     build: ./dmz-firewall/
@@ -207,6 +207,57 @@ services:
         ipv4_address: 10.110.0.40
     profiles:
       - it-splunk
+    mem_limit: 512m
+  
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.14.1
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms1g -Xmx1g
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    ports:
+      - "9200:9200"
+    networks:
+      it_network:
+        ipv4_address: 10.110.0.52
+    profiles:
+      - it-elk
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.14.1
+    environment:
+      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+    ports:
+      - "9443:5601"
+    depends_on:
+      - elasticsearch
+    networks:
+      it_network:
+        ipv4_address: 10.110.0.51
+    profiles:
+      - it-elk
+
+  logstash:
+    build:
+      context: ./it-elk/logstash/
+    # environment:
+    #   ELASTICSEARCH_HOSTS: http://it-elasticsearch:9200
+    # image: ./it-elk/logstash
+    # image: docker.elastic.co/logstash/logstash:8.14.1
+    # volumes:
+    #   - ./it-elk/logstash/pipeline/syslog.conf:/usr/share/logstash/pipeline/syslog.conf
+    depends_on:
+      - elasticsearch
+    networks:
+      it_network:
+        ipv4_address: 10.110.0.50
+    profiles:
+      - it-elk
+    # mem_limit: 256m
       
 volumes:
   scada-data:
