--- a/labshock/docker-compose.yml
+++ b/labshock/docker-compose.yml
@@ -32,11 +32,11 @@ services:
     volumes:
       - portal-data:/app/config/
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./docker-compose.yml:/app/docker/docker-compose.yml 
+      - ./:/app/docker/
     ports:
       - "443:443"   
     environment:
-      - LABSHOCK_VERSION=1.8.1
+      - LABSHOCK_VERSION=1.8.0
 
   dmz-firewall:
     build: ./dmz-firewall/
@@ -53,7 +53,6 @@ services:
       - "5443:5443"
     volumes:
       - portal-data:/app/portal/
-      - dmz-firewall-data:/app/config/
 
   dmz-collector:
     build: ./dmz-collector/
@@ -68,7 +67,6 @@ services:
       - portal
     volumes:
       - portal-data:/app/portal/
-      - dmz-collector-data:/app/config/
 
   dmz-transfer:
     build: ./dmz-transfer/
@@ -109,6 +107,7 @@ services:
         ipv4_address: 192.168.3.254
       mirror_network:
         ipv4_address: 172.31.0.2
+
   scada:
     build: ./scada/
     cap_add:
@@ -118,8 +117,6 @@ services:
         ipv4_address: 192.168.3.20
     ports:
       - '1881:1881'
-    # volumes:
-    #   - scada-data:/usr/src/app/FUXA/server/_appdata
     dns:
      - 127.0.0.11
       
@@ -132,8 +129,6 @@ services:
         ipv4_address: 192.168.2.10
     ports:
       - "8080:8080"
-    # volumes:
-    #   - plc-data:/workdir/webserver
 
   ews:
     build: ./ews/
@@ -144,8 +139,6 @@ services:
         ipv4_address: 192.168.3.11
     ports:
       - "5911:5911"
-    volumes:
-      - ews-data:/home/engineer/
 
   pentest:
     build: ./pentest/
@@ -172,11 +165,6 @@ services:
       - portal
     volumes:
       - portal-data:/app/portal/
-    # ports:
-    #   - "1443:1443"      
-    # networks:
-    #   mirror_network:
-    #     ipv4_address: 172.31.0.3  
     network_mode: host
 
   collector:
@@ -192,7 +180,6 @@ services:
       - portal
     volumes:
       - portal-data:/app/portal/
-      - ot-collector-data:/app/config/
 
   it-splunk:
     image: splunk/splunk:10.0
@@ -207,65 +194,6 @@ services:
         ipv4_address: 10.110.0.40
     profiles:
       - it-splunk
-    mem_limit: 512m
-  
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.14.1
-    environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-      - ES_JAVA_OPTS=-Xms1g -Xmx1g
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    ports:
-      - "9200:9200"
-    networks:
-      it_network:
-        ipv4_address: 10.110.0.52
-    profiles:
-      - it-elk
-
-  kibana:
-    image: docker.elastic.co/kibana/kibana:8.14.1
-    environment:
-      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
-    ports:
-      - "9443:5601"
-    depends_on:
-      - elasticsearch
-    networks:
-      it_network:
-        ipv4_address: 10.110.0.51
-    profiles:
-      - it-elk
-
-  logstash:
-    build:
-      context: ./it-elk/logstash/
-    # environment:
-    #   ELASTICSEARCH_HOSTS: http://it-elasticsearch:9200
-    # image: ./it-elk/logstash
-    # image: docker.elastic.co/logstash/logstash:8.14.1
-    # volumes:
-    #   - ./it-elk/logstash/pipeline/syslog.conf:/usr/share/logstash/pipeline/syslog.conf
-    depends_on:
-      - elasticsearch
-    networks:
-      it_network:
-        ipv4_address: 10.110.0.50
-    profiles:
-      - it-elk
-    # mem_limit: 256m
       
 volumes:
-  scada-data:
-  plc-data:    
-  ews-data:
   portal-data:
-  collector-data:
-  ot-collector-data:
-  dmz-collector-data:
-  dmz-firewall-data:
-  splunk-data:
