--- a/labshock/docker-compose.yml
+++ b/labshock/docker-compose.yml
@@ -6,27 +6,49 @@ networks:
     ipam:
       config:
         - subnet: 192.168.2.0/24
-  l3_network:
+
+  l3_scada_network:
     driver: bridge
     ipam:
       config:
-        - subnet: 192.168.3.0/24
+        - subnet: 192.168.3.0/28
+  
+  l3_security_network:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 192.168.3.16/28
+  
+  l3_pentest_network:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 192.168.3.32/28
+  
+  l3_router_network:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 192.168.3.240/28
+
   dmz_network:
     driver: bridge
     ipam:
       config:
         - subnet: 172.16.0.0/16
+  
   it_network:
     driver: bridge
     ipam:
       config:
         - subnet: 10.110.0.0/16
+  
   mirror_network:
     driver: bridge
     ipam:
       config:
-        - subnet: 172.31.0.0/24
-        
+        - subnet: 1.1.1.0/24
+  
 services:
   portal:
     image: zakharbz/labshock-portal:latest
@@ -40,18 +62,125 @@ services:
       PORTAL_VERSION: 2.0.0
       PLATFORM_URL: https://world.labshocksecurity.com
 
-
-  dmz-firewall:
-    build: ./dmz-firewall/
+  router:
+    build: ./router/
     cap_add:
       - NET_ADMIN
     networks:
-      l3_network:
-        ipv4_address: 192.168.3.253
+      l2_network:
+        ipv4_address: 192.168.2.2
+      l3_scada_network:
+        ipv4_address: 192.168.3.2
+      l3_security_network:
+        ipv4_address: 192.168.3.18
+      l3_pentest_network:
+        ipv4_address: 192.168.3.34
+      l3_router_network:
+        ipv4_address: 192.168.3.243
+      mirror_network:
+        ipv4_address: 1.1.1.3
+    ports:
+      - "1444:5443"
+    depends_on:
+      - portal
+    volumes:
+      - portal-data:/app/portal/
+      
+  plc:
+    build: ./plc/
+    cap_add:
+      - NET_ADMIN
+    networks:
+      l2_network:
+        ipv4_address: 192.168.2.10
+    ports:
+      - "8080:8080"
+
+  scada:
+    build: ./scada/
+    cap_add:
+      - NET_ADMIN
+    networks:
+      l3_scada_network:
+        ipv4_address: 192.168.3.3
+    ports:
+      - '1881:1881'
+    dns:
+     - 127.0.0.11
+
+  ews:
+    build: ./ews/
+    cap_add:
+      - NET_ADMIN
+    networks:
+      l3_scada_network:
+        ipv4_address: 192.168.3.4
+    ports:
+      - "5911:5911"
+
+  ids:
+    build: ./ids/
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
+    privileged: true
+    networks:
+      l3_security_network:
+        ipv4_address: 192.168.3.20
+      mirror_network:
+        ipv4_address: 1.1.1.2
+    ports:
+      - "1443:1443"        
+    environment:
+      LICENSE_URL: localhost     
+    volumes:
+      - portal-data:/app/portal/
+    depends_on:
+      - portal
+
+  collector:
+    build: ./collector/
+    cap_add:
+      - NET_ADMIN
+    networks:
+      l3_security_network:
+        ipv4_address: 192.168.3.19
+    ports:
+      - "2443:2443"
+    volumes:
+      - portal-data:/app/portal/
+    depends_on:
+      - portal
+
+  pentest:
+    build: ./pentest/
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
+    networks:
+      l3_pentest_network:
+        ipv4_address: 192.168.3.35
+    ports:
+      - "2222:22"
+      - "3443:3443"
+    volumes:
+      - portal-data:/app/portal/
+    depends_on:
+      - portal
+
+  dmz-router:
+    build: ./dmz-router/
+    cap_add:
+      - NET_ADMIN
+    networks:
+      l3_router_network:
+        ipv4_address: 192.168.3.242
       dmz_network:
-        ipv4_address: 172.16.0.253
+        ipv4_address: 172.16.0.2
       it_network:
-        ipv4_address: 10.110.0.253
+        ipv4_address: 10.110.0.2
+      mirror_network:
+        ipv4_address: 1.1.1.4
     ports:
       - "5443:5443"
     volumes:
@@ -98,95 +227,6 @@ services:
     ports:
       - "3222:22"
       - "7443:3443"
-    volumes:
-      - portal-data:/app/portal/
-    depends_on:
-      - portal
-
-  router:
-    build: ./router/
-    cap_add:
-      - NET_ADMIN
-    networks:
-      l2_network:
-        ipv4_address: 192.168.2.254
-      l3_network:
-        ipv4_address: 192.168.3.254
-      mirror_network:
-        ipv4_address: 172.31.0.2
-    depends_on:
-      - portal
-
-  scada:
-    build: ./scada/
-    cap_add:
-      - NET_ADMIN
-    networks:
-      l3_network:
-        ipv4_address: 192.168.3.20
-    ports:
-      - '1881:1881'
-    dns:
-     - 127.0.0.11
-      
-  plc:
-    build: ./plc/
-    cap_add:
-      - NET_ADMIN
-    networks:
-      l2_network:
-        ipv4_address: 192.168.2.10
-    ports:
-      - "8080:8080"
-
-  ews:
-    build: ./ews/
-    cap_add:
-      - NET_ADMIN
-    networks:
-      l3_network:
-        ipv4_address: 192.168.3.11
-    ports:
-      - "5911:5911"
-
-  pentest:
-    build: ./pentest/
-    cap_add:
-      - NET_ADMIN
-      - NET_RAW
-    networks:
-      l3_network:
-        ipv4_address: 192.168.3.30
-    ports:
-      - "2222:22"
-      - "3443:3443"
-    volumes:
-      - portal-data:/app/portal/
-    depends_on:
-      - portal
-
-  ids:
-    build: ./ids/
-    cap_add:
-      - NET_ADMIN
-      - NET_RAW
-    network_mode: host
-    environment:
-      LICENSE_URL: localhost     
-    volumes:
-      - portal-data:/app/portal/
-    depends_on:
-      - portal
-
-  collector:
-    build: ./collector/
-    cap_add:
-      - NET_ADMIN
-    networks:
-      l3_network:
-        ipv4_address: 192.168.3.40
-    ports:
-      - "2443:2443"
     volumes:
       - portal-data:/app/portal/
     depends_on:
