--- a/labshock/ids/Dockerfile
+++ b/labshock/ids/Dockerfile
@@ -1,2 +1,3 @@
-FROM zakharbz/labshock-ids:v2.0.1
+FROM zakharbz/labshock-ids:v2.0.2
 COPY ./sources.json /app/config
+COPY ./config.json /app/config
