--- a/labshock/router/config.json
+++ b/labshock/router/config.json
@@ -1,1 +1,1 @@
-{"syslog_ip": "192.168.3.19", "syslog_port": "514", "syslog_enabled": true, "mirror_interface": "eth5", "mirror_enabled": true}
+{"syslog_ip": "192.168.4.40", "syslog_port": "514", "syslog_enabled": true, "mirror_interface": "172.16.200.3", "mirror_enabled": true}
