--- a/labshock/docker-compose.yml
+++ b/labshock/docker-compose.yml
@@ -11,5 +11,9 @@ services:
       - '443:443'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - portal-data:/app/config/
     networks:
       - portal_network
+
+volumes:
+  portal-data:
