--- a/labshock/docker-compose.yml
+++ b/labshock/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - '443:443'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./docker-compose.yml:/app/docker/docker-compose.yml
       - portal-data:/app/config/
     networks:
       - portal_network
