--- a/labshock/docker-compose.yml
+++ b/labshock/docker-compose.yml
@@ -51,7 +51,7 @@ networks:
   
 services:
   portal:
-    image: zakharbz/labshock-portal:latest
+    image: zakharbz/labshock-portal:2.0.0
     volumes:
       - portal-data:/app/config/
       - /var/run/docker.sock:/var/run/docker.sock
